<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="movieData"
            type="com.ahanafi.id.cataloguearchitecturecomp.data.source.remote.network.response.ResultData"
            />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/backdrop_image"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:contentDescription="@string/poster_image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_bg_card"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/colorPrimary"
                tools:layout_editor_absoluteX="51dp"
                tools:srcCompat="@drawable/img_bg_card" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_img"
                android:layout_width="220dp"
                android:layout_height="280dp"
                app:cardCornerRadius="4sp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="@+id/backdrop_image"
                app:layout_constraintStart_toStartOf="parent"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/poster_image"
                    android:layout_width="220dp"
                    android:layout_height="280dp"
                    android:contentDescription="@string/poster_image"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_bg_card"
                    app:srcCompat="@color/colorPrimaryDark"
                    tools:srcCompat="@drawable/img_bg_card" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="#324292"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_img">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/movie_title"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/cardview_title"
                    app:layout_constraintEnd_toEndOf="@+id/cardview_title"
                    app:layout_constraintStart_toStartOf="@+id/cardview_title"
                    app:layout_constraintTop_toTopOf="@+id/cardview_title" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/img_vote_count"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="96dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/poster_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_title"
                app:srcCompat="@drawable/ic_star" />

            <ImageView
                android:id="@+id/img_calendar"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="96dp"
                android:contentDescription="@string/poster_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_title"
                app:srcCompat="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/tv_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="108dp"
                android:layout_marginTop="8dp"
                android:text="@string/text_vote"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_vote_count" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="80dp"
                android:text="@string/text_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_calendar" />

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/overview_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_overview" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>