<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.movie.MovieFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:listitem="@layout/items_data" />

            <ProgressBar
                android:layout_marginTop="40dp"
                android:id="@+id/progressbar"
                style="@style/Base.Widget.AppCompat.ProgressBar"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</layout>